--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
   "theme_color": "#3182ce",
   "icons": [
     {
+      "src": "logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "logo-512.png",
       "sizes": "512x512",
       "type": "image/png",
